# Transfer

./: .gitignore  .gitmodules  CMakeLists.txt  CommandLineDistortion.jucer  End User License Agreement.txt  README.md
.github/workflows/: ci.yml
Builds/VisualStudio2019/: CommandLineDistortion.sln  CommandLineDistortion_SharedCode.vcxproj  CommandLineDistortion_SharedCode.vcxproj.filters  CommandLineDistortion_StandalonePlugin.vcxproj  CommandLineDistortion_StandalonePlugin.vcxproj.filters  CommandLineDistortion_VST3.vcxproj  CommandLineDistortion_VST3.vcxproj.filters  Transfer.sln  Transfer_SharedCode.vcxproj  Transfer_SharedCode.vcxproj.filters  Transfer_StandalonePlugin.vcxproj  Transfer_StandalonePlugin.vcxproj.filters  Transfer_VST3.vcxproj  Transfer_VST3.vcxproj.filters  resources.rc
Include/: CMathParser.h
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: CMakeLists.txt  CMathParser.cpp  Expression.h  ExpressionParser.h  KalexpanderProcessor.h  KrunchProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: Distortion.cpp  Distortion.h  Gate.cpp  Gate.h  PreEmphasisFilter.cpp  PreEmphasisFilter.h
Source/Types/: FilterType.h
Source/UI/: FilterPanel.cpp  FilterPanel.h  GatePanel.h  Graphing.h  LF.h  LabelButton.h  TransferCodeEditor.h
Source/Utils/: ErrorReporter.cpp  ErrorReporter.h  ExprtkTokeniser.cpp  ExprtkTokeniser.h
libs/: mathpresso.lib
